--- a/custom_components/x728-ups/manifest.json
+++ b/custom_components/x728-ups/manifest.json
@@ -5,5 +5,5 @@
   "documentation": "https://example.com",
   "requirements": [],
   "dependencies": [],
-  "codeowners": ["@psopso"],
+  "codeowners": ["@psopso"]
 }
