--- a/custom_components/x728-ups/manifest.json
+++ b/custom_components/x728-ups/manifest.json
@@ -1,9 +1,10 @@
 {
-  "domain": "x728ups",
-  "name": "X728 UPS",
-  "version": "1.0.0",
-  "documentation": "https://example.com",
-  "requirements": [],
+  "domain": "x728_ups",
+  "name": "Suptronics X728 UPS",
+  "documentation": "https://github.com/vasesegmeno/x728_ups",
+  "issue_tracker": "https://github.com/vasesegmeno/x728_ups/issues",
   "dependencies": [],
-  "codeowners": ["@psopso"]
+  "codeowners": ["@vasesegmeno"],
+  "version": "1.0.0",
+  "iot_class": "local_polling"
 }
