--- a/custom_components/x728-ups/manifest.json
+++ b/custom_components/x728-ups/manifest.json
@@ -4,6 +4,7 @@
   "documentation": "https://github.com/vasesegmeno/x728_ups",
   "issue_tracker": "https://github.com/vasesegmeno/x728_ups/issues",
   "dependencies": [],
+  "requirements": ["smbus2==0.4.3"],
   "codeowners": ["@vasesegmeno"],
   "version": "1.0.0",
   "iot_class": "local_polling"
