--- a/custom_components/x728_ups/manifest.json
+++ b/custom_components/x728_ups/manifest.json
@@ -1,5 +1,5 @@
 {
-  "domain": "x728-ups",
+  "domain": "x728_ups",
   "name": "Suptronics X728 UPS",
   "documentation": "https://github.com/vasesegmeno/x728_ups",
   "issue_tracker": "https://github.com/vasesegmeno/x728_ups/issues",
