--- a/custom_components/x728_ups/manifest.json
+++ b/custom_components/x728_ups/manifest.json
@@ -1,11 +1,12 @@
 {
   "domain": "x728_ups",
   "name": "Suptronics X728 UPS",
-  "documentation": "https://github.com/vasesegmeno/x728_ups",
-  "issue_tracker": "https://github.com/vasesegmeno/x728_ups/issues",
-  "dependencies": [],
-  "requirements": ["smbus2==0.4.3"],
-  "codeowners": ["@vasesegmeno"],
   "version": "1.0.0",
+  "documentation": "https://github.com/suptronics/x728",
+  "requirements": [
+    "smbus2",
+    "gpiod"
+  ],
+  "codeowners": [],
   "iot_class": "local_polling"
 }
